# pilot_sensor

./: Application.cpp  Application.h  AverageVisitorCounter.cpp  AverageVisitorCounter.h  CMakeLists.txt  DataCounter.cpp  DataCounter.h  DetectedPerson.cpp  DetectedPerson.h  DominantProfile.cpp  DominantProfile.h  FaceDetector.cpp  FaceDetector.h  MovingAvgVal.cpp  MovingAvgVal.h  Parameters.cpp  Parameters.h  PeopleCounter.cpp  PeopleCounter.h  PeopleDetector.cpp  PeopleDetector.h  PreProcessor.cpp  PreProcessor.h  ROI.cpp  ROI.h  Visitor.cpp  Visitor.h  analytics.output  main.cpp  results.csv  sig_demo.cpp
docs/: testing.txt
